tests/testcases/valid/control_flow/19_for_loops_with_other_control.ciel
// For loops with control flow interactions

int main() {
    int sum = 0;
    
    // Test 1: For loop with goto
    for (int i = 0; i < 5; i = i + 1) {
        if (i == 3) {
            goto skip_loop;
        }
        sum = sum + 1;
    }
    skip_loop:
    sum = sum + 100;
    
    // Test 2: For loop with while inside
    for (int i = 0; i < 3; i = i + 1) {
        int j = 0;
        while (j < 3) {
            sum = sum + 1;
            j = j + 1;
        }
    }
    
    return 0;
}
